@startuml
!theme plain
left to right direction

package WebService.Core.Shared {
    class AuthorDTO
    class LanguageDTO
    class LevelDTO
    class MaterialDTO
    class MediaDTO
    class ProgrammingLanguageDTO
    class RatingDTO
    class TagDTO
    class WeightedTagDTO

    class CreateAuthorDTO
    class CreateLanguageDTO
    class CreateLevelDTO
    class CreateMaterialDTO
    class CreateMediaDTO
    class CreateProgrammingLanguageDTO
    class CreateRatingDTO
    class CreateTagDTO
    class CreateWeightedTagDTO

    class SearchForm
    class Status
    class ISearch
    class ILanguageRepository
    class ILevelRepository
    class IMaterialRepository
    class IMediaRepository
    class IProgrammingLanguageRepository
    class IRepository
    class ITagRepository
}

AuthorDTO -u-|> CreateAuthorDTO
LanguageDTO -u-|> CreateLanguageDTO
LevelDTO -u-|> CreateLevelDTO
MaterialDTO -u-|> CreateMaterialDTO
MediaDTO -u-|> CreateMediaDTO
ProgrammingLanguageDTO -u-|> CreateProgrammingLanguageDTO
RatingDTO -u-|> CreateRatingDTO
TagDTO -u-|> CreateTagDTO
WeightedTagDTO -u-|> CreateWeightedTagDTO
CreateWeightedTagDTO -u-|> CreateTagDTO

ILanguageRepository -u-|> IRepository
ILevelRepository -u-|> IRepository
IMaterialRepository -u-|> IRepository
IMediaRepository -u-|> IRepository
IProgrammingLanguageRepository -u-|> IRepository
ITagRepository -u-|> IRepository

ILanguageRepository -u-> Status
ILevelRepository -u-> Status
IMaterialRepository -u-> Status
IMediaRepository -u-> Status
IProgrammingLanguageRepository -u-> Status
ITagRepository -u-> Status

SearchForm -u-|> ISearch

@enduml